# corpus-bench

./: .gitignore  Cargo.toml  README.md  build.rs  download.sh
decode-png/: Cargo.toml  build.rs
decode-png/src/: main.rs
decode-webp/: Cargo.toml  build.rs
decode-webp/src/: main.rs
deflate/: Cargo.toml
deflate/src/: main.rs
download-and-generate/: Cargo.toml
download-and-generate/src/: main.rs
encode-png/: Cargo.toml  build.rs
encode-png/src/: main.rs
harness/: Cargo.toml
harness/src/: lib.rs
inflate/: Cargo.toml
inflate/src/: main.rs
qoi/: qoibench.c
src/: main.rs
