[workspace]
resolver = "2"

members = ["decode-png", "deflate", "encode-png", "inflate", "harness", "download-and-generate", "decode-webp"]

# [patch.crates-io]
# image = { path = "../image" }

# [patch."https://github.com/fintelia/fdeflate"]
# fdeflate = { path = "../fdeflate" }

# [patch."https://github.com/fintelia/image-png"]
# png = { path = "../image-png" }

[profile.release]
debug = true
