[package]
name = "download-and-generate"
version = "0.1.0"
edition = "2024"

[dependencies]
atomic-write-file = "0.3.0"
byteorder-lite = "0.1.0"
futures-util = "0.3.31"
image = { version = "0.25.8", default-features = false, features = ["png"] }
indicatif = "0.18.0"
reqwest = { version = "0.12.24", features = ["blocking", "stream"] }
tar = "0.4.44"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
