[package]
name = "encode-png"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.6", default-features = false }
png = "0.18.0-rc.3"
harness = { path = "../harness" }
flate2 = { version = "1.1.2", features = ["zlib"] }
qoi = "0.4.1"

# For raw zlib
libz-sys = "1.1.8"

# # For zlib-ng
# libz-sys = { version = "1.1.8", default-features = false, features = ["zlib-ng"] }

[build-dependencies]
cc = "1.2.32"
