[package]
name = "harness"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
ctrlc = "3.4.7"
fdeflate = "0.3.7"
image = { version = "0.25.6", features = [
    "ico",
    "png",
    "webp",
    "qoi",
], default-features = false }
indicatif = "0.18.0"
innumerable = "0.1.0"
rand = "0.9.2"
regex = "1.11.1"
walkdir = "2.5.0"
